log
Thu 11 May 2023 04:38:06 PM UTC: 
 tests:  0|4
total_score: 0/70
f903be9
Thu 11 May 2023 04:47:06 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:36:20: error: invalid type argument of unary ‘*’ (have ‘long unsigned int’)
   36 |   Heap *m = malloc(*sizeof(Heap));
      |                    ^~~~~~~~~~~~~
heap.c:37:27: error: invalid type argument of unary ‘*’ (have ‘long unsigned int’)
   37 |   m -> heapArray = malloc(*sizeof(Heap));
      |                           ^~~~~~~~~~~~~
Compilation failed
621cb51
